--- a/AndroidAnnotations/androidannotations-core/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/pom.xml
@@ -38,6 +38,7 @@
 		<module>androidannotations</module>
 		<module>androidannotations-api</module>
 		<module>androidannotations-test</module>
+		<module>androidannotations-testutils</module>
 	</modules>
 
 </project>
