--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -158,6 +158,12 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.androidannotations</groupId>
+				<artifactId>androidannotations-testutils</artifactId>
+				<version>${project.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>com.sun.codemodel</groupId>
 				<artifactId>codemodel</artifactId>
 				<version>2.6</version>
