--- a/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
@@ -64,31 +64,18 @@
 		<dependency>
 			<groupId>org.robolectric</groupId>
 			<artifactId>robolectric</artifactId>
-			<version>2.4</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.easytesting</groupId>
 			<artifactId>fest-reflect</artifactId>
-			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>fest-android</artifactId>
-			<version>1.0.8</version>
-			<scope>test</scope>
-			<exclusions>
-			<exclusion>
-				<groupId>com.android.support</groupId>
-				<artifactId>support-v4</artifactId>
-			</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.8</version>
-			<scope>test</scope>
+			<artifactId>mockito-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -106,15 +93,6 @@
 			<plugin>
 				<groupId>com.simpligility.maven.plugins</groupId>
 				<artifactId>android-maven-plugin</artifactId>
-				<version>4.2.1</version>
-				<configuration>
-					<androidManifestFile>AndroidManifest.xml</androidManifestFile>
-					<sdk>
-						<platform>16</platform>
-					</sdk>
-					<disableConflictingDependenciesWarning>true</disableConflictingDependenciesWarning>
-				</configuration>
-				<extensions>true</extensions>
 			</plugin>
 
 			<plugin>
