--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
@@ -92,37 +92,18 @@
 		<dependency>
 			<groupId>org.robolectric</groupId>
 			<artifactId>robolectric</artifactId>
-			<version>2.3</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>com.android.support</groupId>
-					<artifactId>support-v4</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>fest-android</artifactId>
-			<version>1.0.8</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>com.android.support</groupId>
-					<artifactId>support-v4</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.8</version>
-			<scope>test</scope>
+			<artifactId>mockito-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -131,15 +112,6 @@
 			<plugin>
 				<groupId>com.simpligility.maven.plugins</groupId>
 				<artifactId>android-maven-plugin</artifactId>
-				<version>4.2.1</version>
-				<configuration>
-					<androidManifestFile>${project.basedir}/AndroidManifest.xml</androidManifestFile>
-					<sdk>
-						<platform>16</platform>
-					</sdk>
-					<disableConflictingDependenciesWarning>true</disableConflictingDependenciesWarning>
-				</configuration>
-				<extensions>true</extensions>
 			</plugin>
 
 			<plugin>
