--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -174,6 +174,49 @@
 				<version>4.11</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-core</artifactId>
+				<version>1.3</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.robolectric</groupId>
+				<artifactId>robolectric</artifactId>
+				<version>2.4</version>
+				<scope>test</scope>
+
+				<exclusions>
+					<exclusion>
+						<groupId>com.android.support</groupId>
+						<artifactId>support-v4</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>com.squareup</groupId>
+				<artifactId>fest-android</artifactId>
+				<version>1.0.8</version>
+				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>com.android.support</groupId>
+						<artifactId>support-v4</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.easytesting</groupId>
+				<artifactId>fest-reflect</artifactId>
+				<version>1.4.1</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>1.10.8</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -248,6 +291,19 @@
 					<groupId>com.mycila</groupId>
 					<artifactId>license-maven-plugin</artifactId>
 					<version>2.6</version>
+				</plugin>
+				<plugin>
+					<groupId>com.simpligility.maven.plugins</groupId>
+					<artifactId>android-maven-plugin</artifactId>
+					<version>4.2.1</version>
+					<configuration>
+						<androidManifestFile>${project.basedir}/AndroidManifest.xml</androidManifestFile>
+						<sdk>
+							<platform>16</platform>
+						</sdk>
+						<disableConflictingDependenciesWarning>true</disableConflictingDependenciesWarning>
+					</configuration>
+					<extensions>true</extensions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
