Remove stuff needed for development in Eclipse

--- a/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
@@ -96,6 +96,9 @@
 					<source>1.6</source>
 					<target>1.6</target>
 					<showWarnings>true</showWarnings>
+					<compilerArgs>
+						<arg>-AandroidManifestFile=${project.basedir}/src/main/AndroidManifest.xml</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
