--- a/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
@@ -105,6 +105,7 @@
 						<arg>-Atrace=true</arg>
 						<arg>-AlogLevel=ERROR</arg>
 						<arg>-AlogFile=${project.build.directory}/functional-test.log</arg>
+						<arg>-AandroidManifestFile=${project.basedir}/src/main/AndroidManifest.xml</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
