--- a/AndroidAnnotations/androidannotations-core/androidannotations-test/src/main/AndroidManifest.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations-test/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
         <activity android:name=".ActivityWithGenerics_" />
         <activity android:name=".WakeLockActivity_" />
         <activity android:name=".FragmentStartedActivity_" />
+        <activity android:name=".KeyEventsActivity_" />
 
         <receiver android:name=".ereceiver.MyReceiver_" />
 
