--- a/AndroidAnnotations/androidannotations-core/androidannotations/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations/pom.xml
@@ -56,6 +56,10 @@
 			<version>4.1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
