--- a/examples/gradle/src/main/AndroidManifest.xml
+++ b/examples/gradle/src/main/AndroidManifest.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.androidannotations.gradle"
+    package="org.androidannotations.sample"
     android:versionCode="1"
-    android:versionName="1.0.0.SNAPSHOT" >
+    android:versionName="1.0">
 
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name"
-        android:allowBackup="true">
-        <activity android:name=".activity.HelloAndroidActivity_" >
+        android:label="@string/app_name">
+        <activity
+            android:name=".MyActivity_"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ActivityWithExtra_" />
+        <activity android:name=".MyListActivity_" />
     </application>
 
 </manifest>
