Fix AA log level in functional test projects

--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
@@ -121,7 +121,7 @@
 					<target>1.6</target>
 					<showWarnings>true</showWarnings>
 					<compilerArgs>
-						<arg>-AlogLevel=WARNING</arg>
+						<arg>-AlogLevel=WARN</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
