--- a/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
@@ -110,7 +110,7 @@
 					<showWarnings>true</showWarnings>
 					<compilerArgs>
 						<arg>-Atrace=true</arg>
-						<arg>-AlogLevel=WARNING</arg>
+						<arg>-AlogLevel=WARN</arg>
 						<arg>-AlogFile=${project.build.directory}/functional-test.log</arg>
 					</compilerArgs>
 				</configuration>
