--- a/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
@@ -89,7 +89,7 @@
 					<target>1.6</target>
 					<showWarnings>true</showWarnings>
 					<compilerArgs>
-						<arg>-AlogLevel=WARNING</arg>
+						<arg>-AlogLevel=WARN</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
