--- a/AndroidAnnotations/androidannotations-otto/pom.xml
+++ b/AndroidAnnotations/androidannotations-otto/pom.xml
@@ -46,6 +46,11 @@
 				<artifactId>otto</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.squareup</groupId>
+				<artifactId>otto</artifactId>
+				<version>1.3.8</version>
+			</dependency>
 		</dependencies>
 
 	</dependencyManagement>
