Removed activity tag

--- a/AndroidAnnotations/androidannotations-core/androidannotations/src/test/resources/org/androidannotations/eview/AndroidManifest.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations/src/test/resources/org/androidannotations/eview/AndroidManifest.xml
@@ -21,10 +21,6 @@
           android:versionCode="1"
           android:versionName="1.0">
 
-    <application>
-        <activity android:name="org.androidannotations.eview.SomeView_"/>
-        <activity
-            android:name="org.androidannotations.eview.SomeViewWithAfterView_"/>
-    </application>
+    <application/>
 
 </manifest>
