--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -20,9 +20,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
+		<groupId>com.simpligility.maven</groupId>
+		<artifactId>progressive-organization-pom</artifactId>
+		<version>4.1.0</version>
 	</parent>
 
 	<groupId>org.androidannotations</groupId>
