--- a/AndroidAnnotations/androidannotations-ormlite/ormlite/pom.xml
+++ b/AndroidAnnotations/androidannotations-ormlite/ormlite/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-ormlite</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0.0</version>
 	</parent>
 
 	<artifactId>ormlite</artifactId>
