Add tests to EditorAction id inferring

--- a/AndroidAnnotations/androidannotations-core/androidannotations/src/test/resources/org/androidannotations/viewlistener/AndroidManifest.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations/src/test/resources/org/androidannotations/viewlistener/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name="org.androidannotations.viewlistener.CompoundButtonListenerActivity_" />
         <activity android:name="org.androidannotations.viewlistener.AdapterViewListenerActivity_" />
         <activity android:name="org.androidannotations.viewlistener.TextViewListenerActivity_" />
+        <activity android:name="org.androidannotations.viewlistener.BadEditorActionViewListenerActivity_" />
     </application>
 
 </manifest>
