--- a/examples/maven/pom.xml
+++ b/examples/maven/pom.xml
@@ -13,7 +13,8 @@
 		<android.platform>16</android.platform>
 		<java.version>1.6</java.version>
 
-		<androidannotations.version>4.1.0</androidannotations.version>
+		<!-- change this to your desired version, for example the latest stable: 4.1.0 -->
+		<androidannotations.version>4.2.0-SNAPSHOT</androidannotations.version>
 	</properties>
 
 	<dependencies>
