--- a/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-ormlite/ormlite-test/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>androidannotations-ormlite</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>4.1.0</version>
 	</parent>
 
 	<artifactId>ormlite-test</artifactId>
