--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>androidannotations-rest-spring</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>4.1.0</version>
 	</parent>
 
 	<artifactId>rest-spring-test</artifactId>
