[maven-release-plugin] prepare for next development iteration

--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring-api/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>androidannotations-rest-spring</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>4.1.0</version>
+		<version>4.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rest-spring-api</artifactId>
