--- a/AndroidAnnotations/androidannotations-core/androidannotations-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations-api/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-core</artifactId>
-		<version>4.1.0</version>
+		<version>4.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>androidannotations-api</artifactId>
