--- a/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>androidannotations-otto</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>4.1.0</version>
+		<version>4.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>otto-test</artifactId>
