--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -2,6 +2,7 @@
 <!--
 
     Copyright (C) 2010-2016 eBusiness Information, Excilys Group
+    Copyright (C) 2016 the AndroidAnnotations project
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not
     use this file except in compliance with the License. You may obtain a copy of
@@ -406,9 +407,9 @@
 	</build>
 
 	<scm>
-		<connection>scm:git:git@github.com:excilys/androidannotations.git</connection>
-		<developerConnection>scm:git:git@github.com:excilys/androidannotations.git</developerConnection>
-		<url>https://github.com/excilys/androidannotations</url>
+		<connection>scm:git:git@github.com:androidannotations/androidannotations.git</connection>
+		<developerConnection>scm:git:git@github.com:androidannotations/androidannotations.git</developerConnection>
+		<url>https://github.com/androidannotations/androidannotations</url>
 		<tag>HEAD</tag>
 	</scm>
 
