Disable license header check
Due to the new license situation we have to adapt the license check so for now we have to disable the license check

--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -316,6 +316,7 @@
 				<groupId>com.mycila</groupId>
 				<artifactId>license-maven-plugin</artifactId>
 				<configuration>
+					<skip>true</skip>
 					<header>${main.basedir}/src/etc/header.txt</header>
 					<excludes>
 						<exclude>.idea/**</exclude>
