Fix test suite for Robolectric 3.1
Add a workaround until Robolectlectric is not fixed.
https://github.com/robolectric/robolectric/issues/2562#issuecomment-263086503

--- a/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-otto/otto-test/pom.xml
@@ -64,6 +64,10 @@
 			<artifactId>robolectric</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.robolectric</groupId>
+			<artifactId>android-all</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>fest-android</artifactId>
 		</dependency>
