--- a/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations-test/pom.xml
@@ -68,6 +68,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.robolectric</groupId>
+			<artifactId>android-all</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.easytesting</groupId>
 			<artifactId>fest-reflect</artifactId>
 		</dependency>
