--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring-test/pom.xml
@@ -100,6 +100,10 @@
             <scope>test</scope>
         </dependency>
 		<dependency>
+			<groupId>org.robolectric</groupId>
+			<artifactId>android-all</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>fest-android</artifactId>
 		</dependency>
