--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -131,24 +131,13 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<main.basedir>${project.basedir}</main.basedir>
-		<robolectric.version>3.1-SNAPSHOT</robolectric.version> <!-- TODO 3.1-->
+		<robolectric.version>3.1.4</robolectric.version>
 	</properties>
 
 
 	<prerequisites>
 		<maven>3.2.1</maven>
 	</prerequisites>
-
-	<repositories> <!-- TODO remove-->
-		<repository>
-			<id>oss-sonatype</id>
-			<name>oss-sonatype</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 
 	<modules>
 		<module>androidannotations-core</module>
@@ -198,6 +187,12 @@
 				<groupId>org.robolectric</groupId>
 				<artifactId>robolectric</artifactId>
 				<version>${robolectric.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency> <!-- TODO https://github.com/robolectric/robolectric/issues/2562#issuecomment-263086503 -->
+				<groupId>org.robolectric</groupId>
+				<artifactId>android-all</artifactId>
+				<version>6.0.0_r1-robolectric-0</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
