--- a/AndroidAnnotations/androidannotations-roboguice/roboguice-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-roboguice/roboguice-api/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>androidannotations-roboguice</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>4.2.0-SNAPSHOT</version>
+		<version>4.2.0</version>
 	</parent>
 
 	<artifactId>roboguice-api</artifactId>
