--- a/AndroidAnnotations/androidannotations-roboguice/roboguice/pom.xml
+++ b/AndroidAnnotations/androidannotations-roboguice/roboguice/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-roboguice</artifactId>
-		<version>4.2.0</version>
+		<version>4.3.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>roboguice</artifactId>
