--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -47,6 +47,22 @@
 
 	<developers>
 		<developer>
+			<id>WonderCsabo</id>
+			<name>Csaba Kozák</name>
+			<email>kozakcsabi@gmail.com</email>
+			<roles>
+				<role>Owner</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>dodgex</id>
+			<name>Kay-Uwe Janssen</name>
+			<email>androidannotations@kujanssen.de</email>
+			<roles>
+				<role>Owner</role>
+			</roles>
+		</developer>
+		<developer>
 			<id>py.ricau</id>
 			<name>Pierre-Yves Ricau</name>
 			<email>py.ricau@gmail.com</email>
@@ -54,7 +70,7 @@
 			<organization>Square, Inc</organization>
 			<organizationUrl>http://squareup.com</organizationUrl>
 			<roles>
-				<role>Owner</role>
+				<role>Former owner</role>
 			</roles>
 		</developer>
 		<developer>
@@ -65,7 +81,7 @@
 			<organization>eBusiness Information</organization>
 			<organizationUrl>http://www.ebusinessinformation.fr</organizationUrl>
 			<roles>
-				<role>Committer</role>
+				<role>Former committer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -76,7 +92,7 @@
 			<organization>eBusiness Information</organization>
 			<organizationUrl>http://www.ebusinessinformation.fr</organizationUrl>
 			<roles>
-				<role>Committer</role>
+				<role>Former committer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -87,7 +103,7 @@
 			<organization>eBusiness Information</organization>
 			<organizationUrl>http://www.ebusinessinformation.fr</organizationUrl>
 			<roles>
-				<role>Committer</role>
+				<role>Former committer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -97,7 +113,7 @@
 			<organization>eBusiness Information</organization>
 			<organizationUrl>http://www.ebusinessinformation.fr</organizationUrl>
 			<roles>
-				<role>Committer</role>
+				<role>Former committer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -107,15 +123,7 @@
 			<organization>Excilys</organization>
 			<organizationUrl>http://excilys.com</organizationUrl>
 			<roles>
-				<role>Committer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>WonderCsabo</id>
-			<name>Csaba Kozák</name>
-			<email>kozakcsabi@gmail.com</email>
-			<roles>
-				<role>Committer</role>
+				<role>Former committer</role>
 			</roles>
 		</developer>
 		<developer>
@@ -123,7 +131,7 @@
 			<name>Yoann Delouis</name>
 			<email>ydelouis@gmail.com</email>
 			<roles>
-				<role>Committer</role>
+				<role>Former committer</role>
 			</roles>
 		</developer>
 	</developers>
