--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -248,6 +248,7 @@
 					<configuration>
 						<source>1.7</source>
 						<target>1.7</target>
+						<showWarnings>true</showWarnings>
 					</configuration>
 				</plugin>
 				<plugin>
