Update APT configuration for Android Plugin 2.3.0

--- a/examples/RoboGuiceExample/build.gradle
+++ b/examples/RoboGuiceExample/build.gradle
@@ -5,8 +5,6 @@ buildscript {
     dependencies {
         // replace with the current version of the Android plugin
         classpath 'com.android.tools.build:gradle:2.3.0'
-        // the latest version of the android-apt plugin
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
@@ -16,19 +14,15 @@ repositories {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
-def AAVersion = '4.3.0-SNAPSHOT' // change this to your desired version, for example the latest stable: 4.2.0
 
+def AAVersion = '4.3.0-SNAPSHOT' // change this to your desired version, for example the latest stable: 4.2.0
 dependencies {
-    apt "org.androidannotations:androidannotations:$AAVersion"
+    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
-    apt "org.androidannotations:roboguice:$AAVersion"
+    annotationProcessor "org.androidannotations:roboguice:$AAVersion"
     compile "org.androidannotations:roboguice-api:$AAVersion"
     compile 'org.roboguice:roboguice:3.0.1'
-    // apt 'org.roboguice:roboblender:3.0.1'
-    // RoboBlender does not work with android-apt currently, so unfortunately we have to turn it off
 }
-
 
 android {
     compileSdkVersion 25
@@ -37,11 +31,17 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 25
+
+        // If you have different applicationIds for buildTypes or productFlavors uncomment this block.
+        //javaCompileOptions {
+        //    annotationProcessorOptions {
+        //        arguments = ['resourcePackageName': android.defaultConfig.applicationId]
+        //    }
+        //}
     }
 
     lintOptions {
         abortOnError false
         // see https://github.com/roboguice/roboguice/issues/295
     }
-
 }
