--- a/examples/gradle/build.gradle
+++ b/examples/gradle/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     dependencies {
         // replace with the current version of the Android plugin
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath "com.android.tools.build:gradle:2.3.0"
     }
 }
 
@@ -13,9 +13,9 @@ repositories {
     mavenLocal()
 }
 
-apply plugin: 'com.android.application'
+apply plugin: "com.android.application"
 
-def AAVersion = '4.3.0-SNAPSHOT' // change this to your desired version, for example the latest stable: 4.2.0
+def AAVersion = "4.3.0-SNAPSHOT" // change this to your desired version, for example the latest stable: 4.2.0
 dependencies {
     annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
