Run dex in process for example projects

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ script:
   - ./mvnw install -P travis
   - cd $TRAVIS_BUILD_DIR/examples/maven
   - ./mvnw install
-  - cd $TRAVIS_BUILD_DIR
-  - ./examples/gradle/gradlew assembleDebug --build-file examples/gradle/build.gradle
+  - cd $TRAVIS_BUILD_DIR/examples/gradle
+  - ./gradlew assembleDebug
 
 after_success:
   - if [[ $TRAVIS_REPO_SLUG == 'androidannotations/androidannotations' && $TRAVIS_BRANCH == 'develop' && $TRAVIS_PULL_REQUEST == 'false' && $TRAVIS_JDK_VERSION == 'oraclejdk8' ]]; then cd $TRAVIS_BUILD_DIR/AndroidAnnotations && ./mvnw -DskipTests -Dquiet -s ../settings.xml deploy ; fi
