--- a/AndroidAnnotations/androidannotations-otto/otto/pom.xml
+++ b/AndroidAnnotations/androidannotations-otto/otto/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-otto</artifactId>
-		<version>4.3.0</version>
+		<version>4.4.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>otto</artifactId>
