--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring-api/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<artifactId>androidannotations-rest-spring</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>4.4.0-SNAPSHOT</version>
+		<version>4.3.1</version>
 	</parent>
 
 	<artifactId>rest-spring-api</artifactId>
