Fail Travis build immediately if command fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,14 @@ before_script:
   - export TERM=dumb
 
 script:
+  - set -e
   - cd $TRAVIS_BUILD_DIR/AndroidAnnotations
   - ./mvnw install -P travis
   - cd $TRAVIS_BUILD_DIR/examples/maven
   - ./mvnw install
   - cd $TRAVIS_BUILD_DIR/examples/gradle
   - ./gradlew assembleDebug
+  - set +e
 
 after_success:
   - if [[ $TRAVIS_REPO_SLUG == 'androidannotations/androidannotations' && $TRAVIS_BRANCH == 'develop' && $TRAVIS_PULL_REQUEST == 'false' && $TRAVIS_JDK_VERSION == 'oraclejdk8' ]]; then cd $TRAVIS_BUILD_DIR/AndroidAnnotations && ./mvnw -DskipTests -Dquiet -s ../settings.xml deploy ; fi
