--- a/examples/kotlin/build.gradle
+++ b/examples/kotlin/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.1.0"
+    ext.kotlin_version = "1.1.3-2"
 
     repositories {
         jcenter()
@@ -22,7 +22,7 @@ apply plugin: "kotlin-kapt"
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.0"
 
     defaultConfig {
         minSdkVersion 9
@@ -33,11 +33,12 @@ android {
     }
 }
 
-kapt {
-    arguments {
-        arg("androidManifestFile", variant.outputs[0].processResourcesTask.manifestFile)
-    }
-}
+// If you have different applicationIds for buildTypes or productFlavors uncomment this block.
+//kapt {
+//    arguments {
+//        arg("resourcePackageName", "org.androidannotations.gradle")
+//    }
+//}
 
 def AAVersion = "4.4.0-SNAPSHOT" // change this to your desired version, for example the latest stable: 4.3.1
 
