--- a/examples/kotlin/build.gradle
+++ b/examples/kotlin/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.1.3-2"
+    ext.kotlin_version = "1.1.51"
 
     repositories {
         jcenter()
@@ -8,6 +8,7 @@ buildscript {
         // replace with the current version of the Android plugin
         classpath "com.android.tools.build:gradle:2.3.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
     }
 }
 
@@ -18,6 +19,7 @@ repositories {
 
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
+apply plugin: "kotlin-allopen"
 apply plugin: "kotlin-kapt"
 
 android {
@@ -33,6 +35,10 @@ android {
     }
 }
 
+allOpen {
+    annotation("org.androidannotations.api.KotlinOpen")
+}
+
 // If you have different applicationIds for buildTypes or productFlavors uncomment this block.
 //kapt {
 //    arguments {
@@ -45,5 +51,5 @@ def AAVersion = "4.4.0-SNAPSHOT" // change this to your desired version, for exa
 dependencies {
     kapt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
