Update example projects

--- a/examples/RoboGuiceExample/build.gradle
+++ b/examples/RoboGuiceExample/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
     dependencies {
         // replace with the current version of the Android plugin
-        classpath "com.android.tools.build:gradle:2.3.0"
+        classpath "com.android.tools.build:gradle:3.0.0"
     }
 }
 
@@ -18,19 +19,19 @@ apply plugin: "com.android.application"
 def AAVersion = "4.4.0-SNAPSHOT" // change this to your desired version, for example the latest stable: 4.3.1
 dependencies {
     annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
-    compile "org.androidannotations:androidannotations-api:$AAVersion"
+    implementation "org.androidannotations:androidannotations-api:$AAVersion"
     annotationProcessor "org.androidannotations:roboguice:$AAVersion"
-    compile "org.androidannotations:roboguice-api:$AAVersion"
-    compile "org.roboguice:roboguice:3.0.1"
+    implementation "org.androidannotations:roboguice-api:$AAVersion"
+    implementation "org.roboguice:roboguice:3.0.1"
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion 26
 
         // If you have different applicationIds for buildTypes or productFlavors uncomment this block.
         //javaCompileOptions {
