--- a/AndroidAnnotations/androidannotations-core/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-parent</artifactId>
-		<version>4.4.0-SNAPSHOT</version>
+		<version>4.4.0</version>
 	</parent>
 
 	<artifactId>androidannotations-core</artifactId>
