--- a/AndroidAnnotations/androidannotations-core/androidannotations/pom.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-core</artifactId>
-		<version>4.6.0-SNAPSHOT</version>
+		<version>4.5.1</version>
 	</parent>
 
 	<artifactId>androidannotations</artifactId>
